# libjeki

./: .gitignore  CMakeLists.txt  README.md
cmake/: LibJekiCompilerOptions.cmake  LibJekiConfig.h.cmake  LibJekiDependency.cmake  LibJekiIncludes.cmake  LibJekiModule.cmake  LibJekiUtilities.cmake  LibJekiVersion.cmake  Package.cmake
scripts/: libjeki.mri
src/base/: CMakeLists.txt
src/base/include/jeki/: base.h  basekey.h  hello.h  make_unique.h  privatekey.h  publickey.h
src/base/src/: hello.cpp  privatekey.cpp  publickey.cpp
src/base/tests/: CMakeLists.txt  basetests.cpp
src/net/: CMakeLists.txt
src/net/include/jeki/net/: tlsmanager.h
src/net/src/: tlsmanager.cpp
src/net/tests/: CMakeLists.txt  nettests.cpp
